@@ -205,7 +205,7 @@ class NoteControllerRoot extends BaseController {
 
 		// edit shared note / delete_shared note
 		$submenu = new Menu($pgv_lang['delete_shared_note']);
-		$submenu->addOnclick("if (confirm('".$pgv_lang["confirm_delete_shared_note"]."')) return deletesource('".$this->nid."'); else return false;");
+		$submenu->addOnclick("if (confirm('".$pgv_lang["confirm_delete_shared_note"]."')) return deletenote('".$this->nid."'); else return false;");
 		if (!empty($PGV_IMAGES["notes"]["small"]))
 			$submenu->addIcon("{$PGV_IMAGE_DIR}/{$PGV_IMAGES['notes']['small']}");
 		$submenu->addClass("submenuitem{$ff}", "submenuitem_hover{$ff}");
