@@ -420,6 +420,11 @@ function deletesource(pid) {
 	 return false;
 }
 
+function deletenote(pid) {
+	 window.open('edit_interface.php?action=deletenote&pid='+pid+"&"+sessionname+"="+sessionid+"&accesstime="+accesstime, '_blank', 'top=50,left=50,width=600,height=500,resizable=1,scrollbars=1');
+	 return false;
+}
+
 function change_family_members(famid) {
 	window.open('edit_interface.php?famid='+famid+"&"+sessionname+"="+sessionid+"&accesstime="+accesstime+"&action=changefamily", '_blank', 'top=50,left=50,width=600,height=500,resizable=1,scrollbars=1');
 	return false;
@@ -431,9 +436,9 @@ function addnewsource(field) {
 	return false;
 }
 
-function addnewshnote(field) {
+function addnewnote(field) {
 	pastefield = field;
-	window.open('edit_interface.php?action=addnewshnote&pid=newshnote', '_blank', 'top=70,left=70,width=600,height=500,resizable=1,scrollbars=1');
+	window.open('edit_interface.php?action=addnewnote&pid=newnote', '_blank', 'top=70,left=70,width=600,height=500,resizable=1,scrollbars=1');
 	return false;
 }
 
