@@ -10,6 +10,8 @@
 
 
 Version 4.2.0 CA
+ - Fixed: case 'deletenote' in edit_interface.php (By adding function deletesource() in phpgedview.js). (windmillway)
+ - Changed: all "shnote" occurrences removed. (windmillway)
  - Changed: renamed several more "shnote" occurrences (Only 14 remaining) (windmillway)
  - Merged: Merge changes r5096 - r5104 from the trunk. (windmillway)
  - Changed: File name shnote_ctrl to note_ctrl (windmillway)
